AP-22321: Add integrated workflow test to check for metanode updates on root workflow manager.
AP-22321 (Executor setting update_metanodelinks_on_load may lead to NullPointerException when loading workflow with nested linked components)